# 3W-unsupervised-learning

./: Environment.yml  README.md  environment.yml  pyproject.toml  setup.sh
moment_projetos/: 3w_moment_uma_variavel.ipynb  fine_tuning.py
